# serious-execution-library

./: CMakeLists.txt  DESIGN.md  README.md
.claude/: README.md  channel-select-analysis.md  settings.local.json
dependencies/: CMakeLists.txt
examples/src/: 00_epoll_st.cpp
include/sl/: coro.hpp  exec.hpp
include/sl/coro/: detail.hpp  generator.hpp  task.hpp
include/sl/eq/: async_connection.hpp  epoll.hpp
include/sl/exec/: algo.hpp  concept.hpp  conn.hpp  coro.hpp  executor.hpp  generic.hpp  model.hpp  sim.hpp  st.hpp  thread.hpp
include/sl/exec/algo/: channel.hpp  emit.hpp  event.hpp  make.hpp  par.hpp  sched.hpp  seq.hpp  sync.hpp  tf.hpp
include/sl/exec/algo/channel/: pipe.hpp
include/sl/exec/algo/emit/: box_subscribe.hpp  detach.hpp  force.hpp  get.hpp  share.hpp  subscribe.hpp
include/sl/exec/algo/event/: atomic.hpp  nowait.hpp
include/sl/exec/algo/make/: as_signal.hpp  contract.hpp  pipe.hpp  result.hpp  schedule.hpp
include/sl/exec/algo/par/: all.hpp  any.hpp
include/sl/exec/algo/sched/: continue_on.hpp  executor.hpp  inline.hpp  manual.hpp  on.hpp  start_on.hpp
include/sl/exec/algo/seq/: and_then.hpp  map.hpp  map_error.hpp  or_else.hpp  transform_connection.hpp
include/sl/exec/algo/sync/: channel.hpp  mutex.hpp  select.hpp  serial.hpp
include/sl/exec/algo/sync/detail/: parallel.hpp
include/sl/exec/algo/tf/: par.hpp  seq.hpp  type.hpp
include/sl/exec/algo/tf/detail/: transform_connection.hpp
include/sl/exec/algo/tf/par/: all.hpp  any.hpp  fork.hpp
include/sl/exec/algo/tf/seq/: and_then.hpp  box.hpp  flatten.hpp  map.hpp  map_error.hpp  or_else.hpp  query_executor.hpp
include/sl/exec/algo/tf/type/: box.hpp  cancellable.hpp  query_executor.hpp
include/sl/exec/conn/: concept.hpp  scheduler.hpp  signal.hpp  slot.hpp
include/sl/exec/conn/scheduler/: inline.hpp
include/sl/exec/conn/signal/: value.hpp
include/sl/exec/conn/slot/: functor.hpp
include/sl/exec/coro/: as_signal.hpp  async.hpp  async_gen.hpp  await.hpp  coroutine.hpp  detail.hpp  generator.hpp  task.hpp
include/sl/exec/executor/: executor.hpp  functor_task.hpp  inline.hpp  manual.hpp  schedule.hpp  task.hpp
include/sl/exec/generic/: async.hpp  executor.hpp  functor.hpp  on.hpp  schedule.hpp  task.hpp
include/sl/exec/model/: concept.hpp  connection.hpp  executor.hpp  slot.hpp  syntax.hpp  task.hpp
include/sl/exec/sim/: platform.hpp  stack.hpp
include/sl/exec/sim/machine/: context.hpp  context_impl.hpp
include/sl/exec/st/: combinators.hpp  executor.hpp  future.hpp  inline.hpp  task.hpp
include/sl/exec/thread/: event.hpp  pool.hpp  sync.hpp
include/sl/exec/thread/detail/: arc.hpp  atomic.hpp  bits.hpp  condition_variable.hpp  lock_free_deque.hpp  lock_free_intrusive_linked_list.hpp  lock_free_stack.hpp  multiword.hpp  multiword_dcss.hpp  multiword_kcas.hpp  mutex.hpp  polyfill.hpp  tagged_ptr.hpp  unbound_blocking_queue.hpp
include/sl/exec/thread/event/: atomic.hpp  mutex.hpp  nowait.hpp
include/sl/exec/thread/pool/: config.hpp  distributed.hpp  monolithic.hpp
include/sl/exec/thread/sync/: wait_group.hpp
include/sl/io/: epoll.hpp  file.hpp  socket.hpp
src/algo/event/: atomic.cpp  mutex.cpp  nowait.cpp
src/algo/sched/: manual.cpp
src/algo/sync/: serial.cpp
src/coro/: async.cpp
src/eq/: async_connection.cpp  epoll.cpp
src/exec/executor/: inline.cpp  manual.cpp
src/exec/st/: executor.cpp
src/io/: epoll.cpp  file.cpp  socket.cpp
src/sim/: platform.cpp
src/sim/machine/: context.cpp  context_impl_arm.S  context_impl_x86_64.S
src/sim/stack/: malloc.cpp  mmap.cpp
src/thread/detail/: multiword_dcss.cpp  multiword_kcas.cpp
src/thread/event/: atomic.cpp  mutex.cpp  nowait.cpp
src/thread/pool/: config.cpp  monolithic.cpp
src/thread/sync/: wait_group.cpp
test/: CMakeLists.txt
test/src/: algo_test.cpp  coro_test.cpp  exec_conn_test.cpp  exec_test.cpp  model_test.cpp  parallel_test.cpp  sim_test.cpp  st_test.cpp  thread_test.cpp
